--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -1,7 +1,7 @@
 [
      {% FOR order_delivery %}
       {
-         "id": "{order_delivery.ID}",
+         "id": {order_delivery.ID},
          "name": "{order_delivery.NAME}",
          "price": {order_delivery.PRICE},
          "endPrice": {order_delivery.END_PRICE},
@@ -11,26 +11,26 @@
             {% IFNOT order_delivery.rules_list_empty %}
              [
                  {% FOR rules_list %}
-                  { "sumMorePrice": "{order_delivery.rules_list.SUM_MORE_PRICE}",
-                     "price": "{order_delivery.rules_list.PRICE}"
+                  { "sumMorePrice": {order_delivery.rules_list.SUM_MORE_PRICE},
+                     "price": {order_delivery.rules_list.PRICE}
                      }
                      {% IFNOT order_delivery.rules_list.last %},{% ENDIF %}
                  {% ENDFOR %} 
             ] {% ELSE %} null {% ENDIF %} ,
-        "zoneListEmpty": "{order_delivery.zone_list_empty}",
+        "zoneListEmpty": {order_delivery.zone_list_empty},
         "zoneList" : 
         {% IFNOT order_delivery.zone_list_empty %} 
         [ {% FOR zone_list %}
          { "name": "{order_delivery.zone_list.NAME}",
           "zoneId": "{order_delivery.zone_list.ID}",
-           "price": "{order_delivery.zone_list.PRICE}",
-            "endPrice": "{order_delivery.zone_list.END_PRICE}", 
-            "zoneRuleListEmpty": "{order_delivery.zone_list.zone_rule_list_empty}",
+           "price": {order_delivery.zone_list.PRICE},
+            "endPrice": {order_delivery.zone_list.END_PRICE}, 
+            "zoneRuleListEmpty": {order_delivery.zone_list.zone_rule_list_empty},
              "zoneRuleList":
               {% IFNOT order_delivery.zone_list.zone_rule_list_empty %}
                [ {% FOR zone_rule_list %}
-                { "sumMorePrice": "{order_delivery.zone_list.zone_rule_list.SUM_MORE_PRICE}",
-                  "price": "{order_delivery.zone_list.zone_rule_list.PRICE}" },
+                { "sumMorePrice": {order_delivery.zone_list.zone_rule_list.SUM_MORE_PRICE},
+                  "price": {order_delivery.zone_list.zone_rule_list.PRICE} },
                  {% ENDFOR %} 
                 ] {% ELSE %} null {% ENDIF %} }
                 {% IFNOT order_delivery.zone_list.last %},{% ENDIF %}
@@ -39,8 +39,8 @@
         "availablePaymentList":
              {% IFNOT order_delivery.available_payment_list_empty %} 
              [ {% FOR available_payment_list %}
-              { "deliveryId": "{order_delivery.ID}",
-               "id": "{order_delivery.available_payment_list.ID}",
+              { "deliveryId": {order_delivery.ID},
+               "id": {order_delivery.available_payment_list.ID},
                 "name": "{order_delivery.available_payment_list.NAME}"
             }
             {% IFNOT order_delivery.available_payment_list.last %},{% ENDIF %}
