--- a/files/cart.htm
+++ b/files/cart.htm
@@ -1,3 +1,66 @@
+<div id="app">
+  <h1>
+    {{ message }}
+  </h1>
+  <h1>{{ count }}</h1>
+  <button class="button" @click="increment">Increment</button>
+  <button class="button" @click="decrement">Decrement</button>
+  <hr>
+  <ul>
+    <li v-for="item in items" >{{ item.name }}</li>
+  </ul>
+  <h3>{{ response.slug }}</h3>
+  <p>{{ response.content }}</p>
+  <button @click="sendRequest" class="button _bordered ">Отправить запрос</button>
+</div>
+
+<script>
+  const { createApp } = Vue
+
+  createApp({
+    data() {
+      return {
+        count: 0,
+        message: 'Hello Vue!',
+        items: [{ id: 1, name: 'Купить продукты' }],
+        response: '',
+      }
+    },
+    methods: {
+            increment() {
+                this.count++
+            },
+            decrement() {
+                this.count--
+            },
+            async sendRequest() {
+              try {
+                const response = await fetch('https://jsonplaceholder.org/posts/1');
+                const data = await response.json();
+                this.response = data; // меняем значение переменной на полученные данные
+              } catch (error) {
+                console.error(error);
+                this.response = 'Ошибка при выполнении запроса';
+              }
+            }
+    },
+    mounted() {
+        const params = new URLSearchParams({ ajax_q: 1, fast_order: 1 });
+        axios({
+          method: "post",
+          url: "/cart/add",
+          responseType: "text",
+          data: params,
+        }).then((response) => {
+          const data = JSON.parse(response.data);
+          this.items = data
+          // console.log(response.data);
+          console.log(data);
+        });            
+    }    
+  }).mount('#app')
+</script>
+<hr>
 <div class="cart-info">
   {% IF FORM_NOTICE %}
     <div class="{% IF FORM_NOTICE_IS_GOOD %}success{% ELSE %}warning{% ENDIF %}">{FORM_NOTICE | nl2br}</div>
