Fix: order_fast

--- a/files/html.htm
+++ b/files/html.htm
@@ -1135,8 +1135,8 @@
               {% ENDIF %}
               {% IF MOD_LNAME = cart  %}
               <div class="col-center col">
-                <!-- <div id="root"></div> -->
-                <div id="rootCounter"></div>
+                <div id="root"></div>
+                <!-- <div id="rootCounter"></div> -->
 
 <script type="text/babel">
 // const REACT_DATA = JSON.parse(``)
@@ -1163,8 +1163,8 @@ const REACT_DATA = JSON.parse(`
 }
 `)
 </script>
-                <!-- <script type="text/babel" type="module" src="/design/react.js"></script> -->
-                <script type="text/babel" type="module" src="/design/counter.js"></script>
+                <script type="text/babel" type="module" src="/design/react.js"></script>
+                <!-- <script type="text/babel" type="module" src="/design/counter.js"></script> -->
               </div>
               {% ENDIF %}
             </div>
