--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -1,4 +1,6 @@
-[
+{
+"ORDER_STAGE_CONFIRM_WITHOUT_DOMAIN_URL": "{ORDER_STAGE_CONFIRM_WITHOUT_DOMAIN_URL}",
+"orderDelivery": [
      {% FOR order_delivery %}
       {
          "id": {order_delivery.ID},
@@ -49,4 +51,4 @@
         }
         {% IFNOT order_delivery.last %},{% ENDIF %}
      {% ENDFOR %}
-]
+]}
