--- a/files/html.htm
+++ b/files/html.htm
@@ -1,16 +1,13 @@
 <!DOCTYPE html> 
 <html lang="ru">
-<head>
-  <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.js" integrity="sha512-RjvSEaeDqPCfUVQ9kna2/2OqHz/7F04IOl1/66LmQjB/lOeAzwq7LrbTzDbz5cJzlPNJ5qteNtHR56XaJSTNWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/8.0.5/react-redux.min.js" integrity="sha512-Vhrd0FFt2WqbwkMmfOHRax4CDMGHJPLtcXcKnKuAxcUSnfiZ576tM4YrkQ3EbuQbnyOSBeCaMFSnrPlNSctq4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://unpkg.com/@reduxjs/toolkit/dist/redux-toolkit.umd.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.core.min.js" integrity="sha512-ChZ5l881NIBx9sxdDy5gEynup6bC4+E8GPWBylkyRYwwK1fHAlGa7+D9m1o4OEjqYA+nygyMR48vNh5kmZWPLg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<head>  
+  <script src="{ASSETS_JS_PATH}axios.min.js"></script>
+  <script src="{ASSETS_JS_PATH}react.development.js"></script>
+  <script src="{ASSETS_JS_PATH}react-dom.development.js"></script>
+  <script src="{ASSETS_JS_PATH}babel.min.js"></script>  
+  <script src="{ASSETS_JS_PATH}react-redux.min.js"></script>
+  <script src="{ASSETS_JS_PATH}redux-toolkit.umd.min.js"></script>
+  
   <title>{PAGE_TITLE}</title>
   <meta name="description" content="{PAGE_META_DESCRIPTION}" />
   <meta name="keywords" content="{PAGE_META_KEYWORDS}" />
