--- a/files/html.htm
+++ b/files/html.htm
@@ -1142,6 +1142,7 @@
 const REACT_DATA = JSON.parse(`
 {
   "HASH": "{HASH}",
+  "SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE": {SETTINGS_GOODS_DONT_PUT_TO_CART_MORE_THAN_AVAILABLE},
   "CURRENCY_CHAR_CODE":"{CURRENCY_CHAR_CODE}",
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
   "CART_TRUNCATE_URL": "{CART_TRUNCATE_URL}",
