Fix: пересчёт корзины и инпут кол-ва

--- a/files/cart.htm
+++ b/files/cart.htm
@@ -5,6 +5,12 @@
   "CART_COUNT_TOTAL": {CART_COUNT_TOTAL},
   "CART_TRUNCATE_URL": "{CART_TRUNCATE_URL}",
   "CART_SUM_NOW": "{CART_SUM_NOW}",
+  "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
+  "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
+  "CART_SUM_NOW_WITH_DISCOUNT": "{CART_SUM_NOW_WITH_DISCOUNT}",
+  "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
+  "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
+  "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
   "cartItems": [
   {% FOR cart_items %}{
     "GOODS_NAME": "{cart_items.GOODS_NAME}",
@@ -16,5 +22,6 @@
   {% IFNOT cart_items.last %},{% ENDIF %}
   {% ENDFOR %}
   ],
-  "FORM_NOTICE": "{% IF FORM_NOTICE %}{FORM_NOTICE}{% ENDIF %}"
+  "FORM_NOTICE": "{% IF FORM_NOTICE %}{FORM_NOTICE}{% ENDIF %}",
+  "cartSum": "{% FOR cart_sum %}NOW: {cart_sum.NOW};DISCOUNT:{cart_sum.DISCOUNT};NOW_WITH_DELIVERY_AND_DISCOUNT:{cart_sum.NOW_WITH_DELIVERY_AND_DISCOUNT};{% ENDFOR %}"
 }
