--- a/files/html.htm
+++ b/files/html.htm
@@ -1164,7 +1164,9 @@ const REACT_DATA = JSON.parse(`
 </script>
                 <script type="text/babel" type="module" src="/design/react.js"></script>
                 <!-- <script type="text/babel" type="module" src="/design/counter.js"></script> -->                
-
+                <pre>
+                  <!-- {print_r} -->
+                </pre>
               </div>
               {% ENDIF %}
             </div>
