--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -1,5 +1,6 @@
 {
 "ORDER_STAGE_CONFIRM_WITHOUT_DOMAIN_URL": "{ORDER_STAGE_CONFIRM_WITHOUT_DOMAIN_URL}",
+"cartSum": "{% FOR cart_sum %}NOW: {cart_sum.NOW};DISCOUNT:{cart_sum.DISCOUNT};NOW_WITH_DELIVERY_AND_DISCOUNT:{cart_sum.NOW_WITH_DELIVERY_AND_DISCOUNT};{% ENDFOR %}",
 "orderDelivery": [
      {% FOR order_delivery %}
       {
