--- a/files/html.htm
+++ b/files/html.htm
@@ -36,11 +36,11 @@
   <link rel="stylesheet" href="{ASSETS_STYLES_PATH}main.css?design=conditer">
   
 </head>
-<script>
+<!-- <script>
   window.onload = ()=>{
     axios.get('https://suggest-maps.yandex.ru/v1/suggest?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&text=Варшав')
   }
-</script>
+</script> -->
 <!-- <body>
   <div id="map" style="width: 600px; height: 400px"></div>
 <script>
@@ -528,8 +528,7 @@
               
               <!-- Центральный блок-->
               {% IF MOD_LNAME = cart  %}
-              <div class="col-center col">
-                <a href="/cart/add/?hash={HASH}&form%5Bgoods_from%5D=&form%5Bgoods_mod_id%5D=160093968">add</a>
+              <div class="col-center col">                
                 <div id="root"></div>
                 <!-- <div id="rootCounter"></div> -->
 
