--- a/files/html.htm
+++ b/files/html.htm
@@ -7,6 +7,7 @@
   <script src="{ASSETS_JS_PATH}babel.min.js"></script>  
   <script src="{ASSETS_JS_PATH}react-redux.min.js"></script>
   <script src="{ASSETS_JS_PATH}redux-toolkit.umd.min.js"></script>
+  <script src="{ASSETS_JS_PATH}react-query.production.js"></script>
   <script src="{ASSETS_JS_PATH}utils.js"></script>
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
