fix: cart update

--- a/files/html.htm
+++ b/files/html.htm
@@ -534,7 +534,7 @@
               <!-- Центральный блок-->
               {% IF MOD_LNAME = cart  %}
               <div class="col-center col">                
-                <div id="root"></div>
+                <div id="root-cart"></div>
                 <script>window.HASH = '{HASH}'</script>
                 <!-- <script type="text/babel" type="module" src="/design/react.js"></script> -->
                 <script type="text/babel" type="module" src="/design/cart-query.js"></script>
