--- a/files/cart.htm
+++ b/files/cart.htm
@@ -17,6 +17,7 @@
     "GOODS_MOD_ID": {cart_items.GOODS_MOD_ID},
     "ORDER_LINE_QUANTITY": {cart_items.ORDER_LINE_QUANTITY},
     "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
+    "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
     "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}"
   }
   {% IFNOT cart_items.last %},{% ENDIF %}
