--- a/files/cart.htm
+++ b/files/cart.htm
@@ -12,15 +12,32 @@
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
   "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
   "cartItems": [
-  {% FOR cart_items %}{
-    "GOODS_NAME": "{cart_items.GOODS_NAME}",
-    "GOODS_MOD_ID": {cart_items.GOODS_MOD_ID},
-    "ORDER_LINE_QUANTITY": {cart_items.ORDER_LINE_QUANTITY},
-    "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
-    "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
-    "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}"
-  }
+  {% FOR cart_items %}
+    {
+      "GOODS_NAME": "{cart_items.GOODS_NAME}",
+      "GOODS_MOD_ID": {cart_items.GOODS_MOD_ID},
+      "ORDER_LINE_QUANTITY": {cart_items.ORDER_LINE_QUANTITY},
+      "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
+      "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
+      "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
+      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}"
+    }
   {% IFNOT cart_items.last %},{% ENDIF %}
+  {% ENDFOR %}
+  ],
+  "cartDiscount": [
+  {% FOR cart_discount %}
+    
+    {
+      "DISCOUNT_TYPE": "{% IF cart_discount.DISCOUNT_TYPE= sum %}sum{% ELSEIF  cart_discount.DISCOUNT_TYPE= cumulative%}cumulative{% ELSE %}coupon{% ENDIF %}",
+      "DISCOUNT_NAME": "{cart_discount.DISCOUNT_NAME}",
+      "DISCOUNT_VALUE": {cart_discount.DISCOUNT_VALUE},
+      "IS_PERCENT": {% IF cart_discount.IS_PERCENT %}1{% ELSE %}0{% ENDIF %},
+      "END_PRICE": "{cart_discount.END_PRICE}",
+      "DISCOUNT_IS_ENABLED": "{cart_discount.DISCOUNT_IS_ENABLED}"
+    }
+    {% IFNOT cart_discount.last %},{% ENDIF %}
+    
   {% ENDFOR %}
   ],
   "FORM_NOTICE": "{% IF FORM_NOTICE %}{FORM_NOTICE}{% ENDIF %}",
