--- a/files/cart.htm
+++ b/files/cart.htm
@@ -7,6 +7,7 @@
   "CART_SUM_NOW": "{CART_SUM_NOW}",
   "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
   "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
+  "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
   "CART_SUM_NOW_WITH_DISCOUNT": "{CART_SUM_NOW_WITH_DISCOUNT}",
   "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
