feat: add immer

--- a/files/html.htm
+++ b/files/html.htm
@@ -10,6 +10,8 @@
   <!-- <script src="{ASSETS_JS_PATH}react-query.production.js" defer></script> -->
   <script src="{ASSETS_JS_PATH}react-query.development.js" defer></script>
   <script src="{ASSETS_JS_PATH}react-query-devtools.js" defer></script>
+  <!-- <script src="{ASSETS_JS_PATH}immer.umd.production.min.js" defer></script> -->
+  <!-- <script src="{ASSETS_JS_PATH}use-immer.umd.js" defer></script> -->
   <!-- <script src="{ASSETS_JS_PATH}zustand.min.js"></script> -->
   <!-- <script src="{ASSETS_JS_PATH}zustand.vanilla.js"></script> -->
   <!-- <script src="{ASSETS_JS_PATH}zustand.umd.js" defer></script> -->
