--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -3,6 +3,12 @@
   "ORDER_FORM_CONTACT_PERSON": "{ORDER_FORM_CONTACT_PERSON}",
   "ORDER_FORM_CONTACT_PHONE": "{ORDER_FORM_CONTACT_PHONE}",
   "ORDER_FORM_CONTACT_EMAIL": "{ORDER_FORM_CONTACT_EMAIL}",  
+  "CLIENT_IS_LOGIN": "{CLIENT_IS_LOGIN}",
+  "ORDER_FORM_CONTACT_ADDR": "{ORDER_FORM_CONTACT_ADDR}",
+  "ORDER_FORM_CONTACT_CITY": "{ORDER_FORM_CONTACT_CITY}",
+  "ORDER_FORM_CONTACT_REGION" : "{ORDER_FORM_CONTACT_REGION}",
+  "ORDER_FORM_CONTACT_ZIP_CODE":"{ORDER_FORM_CONTACT_ZIP_CODE}",
+  "ORDER_FORM_CONTACT_COUNTRY":"{ORDER_FORM_CONTACT_COUNTRY}",
   "deliveries": [
   {% FOR order_delivery %}
    {
