--- a/files/html.htm
+++ b/files/html.htm
@@ -1,6 +1,14 @@
 <!DOCTYPE html> 
 <html lang="ru">
 <head>  
+
+  <!-- Подключаемые шрифты -->  
+  <link rel="stylesheet" href="/design/fonts.css">
+  
+  <!-- Скрипты магазина -->
+  <script src="{ASSETS_JS_PATH}forall.js"></script>
+  <script src="{ASSETS_JS_PATH}main.js?design=conditer"></script>
+  
   <script src="{ASSETS_JS_PATH}axios.min.js" defer></script>
   <script src="{ASSETS_JS_PATH}react.development.js" defer></script>
   <script src="{ASSETS_JS_PATH}react-dom.development.js" defer></script>
@@ -16,6 +24,8 @@
   <!-- <script src="{ASSETS_JS_PATH}zustand.vanilla.js"></script> -->
   <!-- <script src="{ASSETS_JS_PATH}zustand.umd.js" defer></script> -->
   <script src="{ASSETS_JS_PATH}utils.js" defer></script>
+  <script src="{ASSETS_JS_PATH}nouislider.js" defer></script>
+  <script src="{ASSETS_JS_PATH}nouislider-react.min.js" defer></script>
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
   <title>{PAGE_TITLE}</title>
@@ -1379,12 +1389,6 @@
     }    
   </style>
 
-  <!-- Подключаемые шрифты -->  
-  <link rel="stylesheet" href="/design/fonts.css">
-  
-  <!-- Скрипты магазина -->
-  <script src="{ASSETS_JS_PATH}forall.js"></script>
-  <script src="{ASSETS_JS_PATH}main.js?design=conditer"></script>
 
   {% IF user_agent_ie %}
   <script>
