--- a/files/order.htm
+++ b/files/order.htm
@@ -25,6 +25,20 @@
   {% IFNOT cart_items.last %},{% ENDIF %}
   {% ENDFOR %}
   ],
+  "cartRelatedGoods": [  
+  {% IFNOT cart_related_goods_empty %}
+  {% FOR cart_related_goods %}
+    {
+      "GOODS_NAME": "{cart_related_goods.NAME}",
+      "GOODS_MOD_ID": "{cart_related_goods.MIN_PRICE_NOW_ID}",
+      "ORDER_LINE_QUANTITY": 1,
+      "GOODS_MOD_PRICE_NOW": {cart_related_goods.MIN_PRICE_NOW},
+      "GOODS_IMAGE": "{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}"
+    }
+  {% IFNOT cart_related_goods.last %},{% ENDIF %}
+  {% ENDFOR %}
+  {% ENDIF %}
+  ],
   "cartDiscount": [
   {% FOR cart_discount %}
     
