--- a/files/order.htm
+++ b/files/order.htm
@@ -20,7 +20,20 @@
       "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
       "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
       "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
-      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}"
+      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}",
+      "GOODS_MOD_ART_NUMBER": "{cart_items.GOODS_MOD_ART_NUMBER}",
+      "GOODS_URL": "{cart_items.GOODS_URL}",
+      "distinctiveProperties": [
+        {% IFNOT cart_items.distinctive_properties_empty %}
+        {% FOR distinctive_properties %}
+          {
+            "NAME": "{cart_items.distinctive_properties.NAME}",
+            "VALUE": "{cart_items.distinctive_properties.VALUE}"
+          }
+          {% IFNOT cart_items.distinctive_properties.last %},{% ENDIF %}
+        {% ENDFOR %}
+        {% ENDIF %}  
+      ]
     }
   {% IFNOT cart_items.last %},{% ENDIF %}
   {% ENDFOR %}
