fix: template variables

--- a/files/order.htm
+++ b/files/order.htm
@@ -7,10 +7,14 @@
   "CART_SUM_NOW": "{CART_SUM_NOW}",
   "CART_SUM_DELIVERY": "{CART_SUM_DELIVERY}",
   "CART_SUM_NOW_WITH_DELIVERY": "{CART_SUM_NOW_WITH_DELIVERY}",
+  "CART_SUM_OLD_WITH_DELIVERY": "{CART_SUM_OLD_WITH_DELIVERY}",
+  "CART_SUM_SUPPLIER_WITH_DELIVERY": "{CART_SUM_SUPPLIER_WITH_DELIVERY}",
   "CART_SUM_NOW_WITH_DISCOUNT": "{CART_SUM_NOW_WITH_DISCOUNT}",
   "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
   "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
+  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": "{SETTINGS_STORE_ORDER_MIN_ORDER_PRICE}",
+  "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": "{SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY}",
   "cartItems": [
   {% FOR cart_items %}
     {
