--- a/files/cart.htm
+++ b/files/cart.htm
@@ -13,6 +13,8 @@
   "CART_SUM_DISCOUNT": "{CART_SUM_DISCOUNT}",
   "CART_SUM_DISCOUNT_PERCENT": "{CART_SUM_DISCOUNT_PERCENT}",
   "CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT": "{CART_SUM_NOW_WITH_DELIVERY_AND_DISCOUNT}",
+  "SETTINGS_STORE_ORDER_MIN_ORDER_PRICE": "{SETTINGS_STORE_ORDER_MIN_ORDER_PRICE}",
+  "SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY": "{SETTINGS_STORE_ORDER_MIN_PRICE_WITHOUT_DELIVERY}",
   "cartItems": [
   {% FOR cart_items %}
     {
@@ -22,21 +24,49 @@
       "GOODS_MOD_PRICE_NOW": {cart_items.GOODS_MOD_PRICE_NOW},
       "ORDER_LINE_PRICE_NOW": {cart_items.ORDER_LINE_PRICE_NOW},
       "ORDER_LINE_DELETE_URL": "{cart_items.ORDER_LINE_DELETE_URL}",
-      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}"
+      "GOODS_IMAGE": "{% IF cart_items.GOODS_IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_items.GOODS_IMAGE_OTHER}{% ENDIF %}",
+      "GOODS_MOD_ART_NUMBER": "{cart_items.GOODS_MOD_ART_NUMBER}",
+      "GOODS_URL": "{cart_items.GOODS_URL}",
+      "distinctiveProperties": [
+        {% IFNOT cart_items.distinctive_properties_empty %}
+        {% FOR distinctive_properties %}
+          {
+            "NAME": "{cart_items.distinctive_properties.NAME}",
+            "VALUE": "{cart_items.distinctive_properties.VALUE}"
+          }
+          {% IFNOT cart_items.distinctive_properties.last %},{% ENDIF %}
+        {% ENDFOR %}
+        {% ENDIF %}  
+      ]
     }
   {% IFNOT cart_items.last %},{% ENDIF %}
   {% ENDFOR %}
+  ],
+  "cartRelatedGoods": [  
+  {% IFNOT cart_related_goods_empty %}
+  {% FOR cart_related_goods %}
+    {
+      "GOODS_NAME": "{cart_related_goods.NAME}",
+      "GOODS_MOD_ID": "{cart_related_goods.MIN_PRICE_NOW_ID}",
+      "ORDER_LINE_QUANTITY": 1,
+      "GOODS_MOD_PRICE_NOW": {cart_related_goods.MIN_PRICE_NOW},
+      "GOODS_IMAGE": "{% IF cart_related_goods.IMAGE_EMPTY %}{ASSETS_IMAGES_PATH}no-photo-icon.png?design=conditer{% ELSE %}{cart_related_goods.IMAGE_MEDIUM}{% ENDIF %}"
+    }
+  {% IFNOT cart_related_goods.last %},{% ENDIF %}
+  {% ENDFOR %}
+  {% ENDIF %}
   ],
   "cartDiscount": [
   {% FOR cart_discount %}
     
     {
-      "DISCOUNT_TYPE": "{% IF cart_discount.DISCOUNT_TYPE= sum %}sum{% ELSEIF  cart_discount.DISCOUNT_TYPE= cumulative%}cumulative{% ELSE %}coupon{% ENDIF %}",
+      "DISCOUNT_TYPE": "{cart_discount.DISCOUNT_TYPE}",
       "DISCOUNT_NAME": "{cart_discount.DISCOUNT_NAME}",
       "DISCOUNT_VALUE": {cart_discount.DISCOUNT_VALUE},
       "IS_PERCENT": {% IF cart_discount.IS_PERCENT %}1{% ELSE %}0{% ENDIF %},
       "END_PRICE": "{cart_discount.END_PRICE}",
-      "DISCOUNT_IS_ENABLED": "{cart_discount.DISCOUNT_IS_ENABLED}"
+      "DISCOUNT_IS_ENABLED": "{cart_discount.DISCOUNT_IS_ENABLED}",
+      "DISCOUNT_TYPE_DESCRIPTION": "{cart_discount.DISCOUNT_TYPE_DESCRIPTION}"
     }
     {% IFNOT cart_discount.last %},{% ENDIF %}
     
