--- a/files/html.htm
+++ b/files/html.htm
@@ -26,6 +26,7 @@
   <script src="{ASSETS_JS_PATH}utils.js" defer></script>
   <script src="{ASSETS_JS_PATH}nouislider.js" defer></script>
   <script src="{ASSETS_JS_PATH}nouislider-react.min.js" defer></script>
+  <script src="{ASSETS_JS_PATH}pristine.js" defer></script>
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
   <title>{PAGE_TITLE}</title>
