--- a/files/html.htm
+++ b/files/html.htm
@@ -27,6 +27,9 @@
   <script src="{ASSETS_JS_PATH}nouislider.js" defer></script>
   <script src="{ASSETS_JS_PATH}nouislider-react.min.js" defer></script>
   <script src="{ASSETS_JS_PATH}pristine.js" defer></script>
+  <script src="https://unpkg.com/imask" defer></script>
+  <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js" defer></script>
+  <script src="https://unpkg.com/react-imask@7.4.0/dist/react-imask.js" defer></script>
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
   <title>{PAGE_TITLE}</title>
@@ -128,7 +131,7 @@
               </svg>
             </button>
             <div class="header-content">
-              <div class="header-content__overlay"></div>
+              
               <div class="header-content__nav">
                 <button class="header-content__button" data-target="header-catalog">Каталог</button>
                 <button class="header-content__button" data-target="header-menu">Меню</button>
