feat: start favorites

--- a/files/cart.htm
+++ b/files/cart.htm
@@ -56,6 +56,18 @@
   {% ENDFOR %}
   {% ENDIF %}
   ],
+  "favoritesGoods": [  
+  {% IFNOT favorites_goods_empty %}
+  {% FOR favorites_goods %}
+    {      
+      "ID": "{favorites_goods.ID}",
+      "MAX_PRICE_NOW_ID": "{favorites_goods.MAX_PRICE_NOW_ID}",
+      "MIN_PRICE_NOW_ID": "{favorites_goods.MIN_PRICE_NOW_ID}"
+    }
+  {% IFNOT favorites_goods.last %},{% ENDIF %}
+  {% ENDFOR %}
+  {% ENDIF %}
+  ],
   "cartDiscount": [
   {% FOR cart_discount %}
     
