--- a/files/html.htm
+++ b/files/html.htm
@@ -25,8 +25,8 @@
   <!-- <script src="{ASSETS_JS_PATH}zustand.umd.js" defer></script> -->
   <script src="{ASSETS_JS_PATH}utils.js" defer></script>
   <script src="{ASSETS_JS_PATH}nouislider.js" defer></script>
-  <script src="{ASSETS_JS_PATH}nouislider-react.min.js" defer></script>
-  <script src="{ASSETS_JS_PATH}pristine.js" defer></script>
+  <!-- <script src="{ASSETS_JS_PATH}nouislider-react.min.js" defer></script> -->
+  <!-- <script src="{ASSETS_JS_PATH}pristine.js" defer></script> -->
   <script src="https://unpkg.com/imask" defer></script>
   <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js" defer></script>
   <script src="https://unpkg.com/react-imask@7.4.0/dist/react-imask.js" defer></script>
