--- a/files/html.htm
+++ b/files/html.htm
@@ -30,6 +30,7 @@
   <script src="https://unpkg.com/imask" defer></script>
   <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js" defer></script>
   <script src="https://unpkg.com/react-imask@7.4.0/dist/react-imask.js" defer></script>
+  <script src="https://unpkg.com/classnames@2.5.1/index.js" defer></script>  
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
   <title>{PAGE_TITLE}</title>
