--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -10,6 +10,7 @@
   "ORDER_FORM_CONTACT_ZIP_CODE":"{ORDER_FORM_CONTACT_ZIP_CODE}",
   "ORDER_FORM_CONTACT_COUNTRY":"{ORDER_FORM_CONTACT_COUNTRY}",
   "ORDER_FORM_DELIVERY_COUNTRY_ID":"{ORDER_FORM_DELIVERY_COUNTRY_ID}",
+  "ORDER_DISCOUNT_COUPON_IS_ENABLED": {% IF ORDER_DISCOUNT_COUPON_IS_ENABLED %}true{% ELSE %}false{% ENDIF %},
   "SETTINGS_ORDER_FIELDS" :{
     "ConvenientTime": {
       "isVisible": {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME < 3 %}true{% ELSE %}false{% ENDIF %},
