--- a/files/html.htm
+++ b/files/html.htm
@@ -38,7 +38,7 @@
   <meta name="keywords" content="{PAGE_META_KEYWORDS}" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <meta name="format-detection" content="telephone=no"><!--если вы где-нибудь на странице указали номер телефона в html-коде и не указали в хедере, то смартфон распознает его как телефонный номер и попытается набрать его по клику. -->
   <link rel="icon" href="{ASSETS_IMAGES_PATH}favicon.ico?design=conditer" type="image/x-icon" />
   <link rel="shortcut icon" href="{ASSETS_IMAGES_PATH}favicon.ico?design=conditer" type="image/x-icon" />
