fix: use modules

--- a/files/html.htm
+++ b/files/html.htm
@@ -556,7 +556,9 @@
                 <div id="root-cart"></div>
                 <script>window.HASH = '{HASH}'</script>
                 <!-- <script type="text/babel" type="module" src="/design/react.js"></script> -->
-                <script type="text/babel" type="module" src="/design/cart-query.js"></script>
+                <script type="text/babel" data-type="module" type="module" src="/design/cart-query.js" defer></script>
+                <!-- <script type="text/babel" data-type="module" type="module" src="/design/components_EmptyCart.js"></script>
+                <script type="text/babel" data-type="module" type="module" src="/design/components_CartApp.js"></script> -->
                 <!-- <script type="text/babel" type="module" src="/design/counter.js"></script> -->                
                 <pre>
                   <!-- {print_r} -->
