--- a/files/html.htm
+++ b/files/html.htm
@@ -31,6 +31,13 @@
   <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js" defer></script>
   <script src="https://unpkg.com/react-imask@7.4.0/dist/react-imask.js" defer></script>
   <script src="https://unpkg.com/classnames@2.5.1/index.js" defer></script>  
+  <script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js" defer></script>  
+  <script src="https://unpkg.com/@popperjs/core@2.11.8/dist/umd/popper.min.js" defer></script>  
+  <script src="https://unpkg.com/air-datepicker@3.4.0/air-datepicker.js" defer></script>  
+  <link href="
+  https://cdn.jsdelivr.net/npm/air-datepicker@3.4.0/air-datepicker.min.css
+  " rel="stylesheet">
+  
   <!-- <script src="{ASSETS_JS_PATH}lodash.min.js"></script> -->
   <!-- <script src="https://api-maps.yandex.ru/3.0/?apikey=ed0d2062-286e-4d1c-af19-7f7f0a67740a&lang=ru_RU"></script> -->
   <title>{PAGE_TITLE}</title>
